# vboard

./: .gitignore  GESTURE_TYPING.md  README.md  index.html  io.github.archisman-panigrahi.vboard.desktop  meson.build  org.mdev.vboard.desktop  setup-ubuntu-debian.sh  site.css  uinput.md  update-version-number.sh  vboard.py
.github/workflows/: build-deb.yml
AUR/: PKGBUILD  vboard-git.install  vboard.install
debian/: changelog  control  copyright  postinst  prerm  rules
meson/: io.github.archisman-panigrahi.vboard.desktop.in  org.mdev.vboard.desktop.in
screenshots/: stitch_all.sh
scripts/: README.md  install-kwin-rule.sh  install-plasma-osk.sh  meson-install.sh  meson-post-install.sh  meson-uninstall.sh  setup-uinput.sh  uninstall-kwin-rule.sh  uninstall-plasma-osk.sh
udev/: 70-vboard-uinput.rules
vboard/: __init__.py  app.py  constants.py  environment.py  gesture.py  gtk.py  input_backends.py  libei.py  suggestions.py  window.py
